--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -255,3 +255,8 @@ ui bootstrap tweaks
 }
 
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+
+a.nav-link.router-link-exact-active.router-link-active {
+  border: 1px solid;
+  color: coral;
+}
